# databricks-geosptial-notebooks

./: pyproject.toml
databricks_notebooks/: 01 - display US coastline shapefile.ipynb  02 - experiment with h3 coordinate system.ipynb  sample - h3-detect-flight-holding-pattern.py
