[project]
name = "databricks-geosptial-notebooks"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.9"
dependencies = [
    "folium>=0.20.0",
    "geopandas>=1.0.1",
    "jupyter>=1.1.1",
    "matplotlib>=3.9.4",
    "pandas>=2.3.2",
    "pyspark<4.0.0",
]

[dependency-groups]
dev = [
    "black[jupyter]>=25.1.0",
]
